--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,23 @@
-Hi express
+<!DOCTYPE html>
+<html>
+<head>
+	<title>OnlineShop</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1, width = device-width, user-scalable = 0">
+	<link rel="stylesheet" type="text/css" href="css/grid-fluid-12.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+<body>
+    <div id="wrap1" class="container_12">
+        <div id="top" class="container_12">
+            <div class="form-group">
+                
+            </div>
+            <div class="form-group">
+                
+            </div>
+            <button type="submit" class="btn btn-success">Sign in</button>
+        </div>
+    </div>
+</body>
+</html>
