--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,11 @@
                 
             </div>
             <button type="submit" class="btn btn-success">Sign in</button>
+
+            <input type="filepicker" data-fp-apikey="AfDUcO2yfT4yVBX9p2t4Xz" data-fp-mimetypes="text/comma-separated-values, text/csv, application/csv, application/excel, application/vnd.ms-excel, application/vnd.msexcel, text/anytext" data-fp-container="modal" onchange="alert(event.fpfile.url)">
         </div>
     </div>
+
+    <script "text/javascript" src="//api.filepicker.io/v2/filepicker.js"></script>
 </body>
 </html>
