--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,15 +8,20 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <div id="wrap1" class="container_12">
+    <div id="wrap1">
         <div id="top" class="container_12">
-            <div class="form-group">
-                
+            <div class="grid_6">
+                <img src="img/Online_Shop_Logo.24535510_std.png">
             </div>
-            <div class="form-group">
-                
+            <div class="grid_2">
+                <input placeholder="Email">
             </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
+            <div class="grid_2">
+                <input placeholder="Password">
+            </div>
+            <div class="grid_2">
+                <button>Sign in</button>
+            </div>
         </div>
     </div>
 </body>
