Login controller and routes added but something eval isLogin went wrong

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,21 @@
     <base href="/">
 
 	<meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1, width = device-width, user-scalable = 0">
-	<link rel="stylesheet" type="text/css" href="css/grid-fluid-12.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+	<!--<link rel="stylesheet" type="text/css" href="css/grid-fluid-12.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <script>
+        var isLogin = <%- isLogin ? 'true' : 'false'%>;
+        if(isLogin){
+            var userId = "<%- User.cid %>";
+            userName = "<%- User.cname %>";
+            var userGender = "<%- User.cgender %>"
+            var userBirthday = "<%- User.cbirthday %>";
+            var userAccount = "<%- User.caccount %>";
+            var userPhoto = "<%- User.cphoto %>";
+        }
+    </script>
 </head>
 <body ng-controller="AppCtrl">
 
@@ -29,38 +40,28 @@
         </a>
     </div>
 
+    <form class="navbar-form navbar-left" role="search">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Search">
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+
+
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Product <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Profile</a></li>
+        <li><a href="#" ng-bind="$root.user.userName || '訪客'"></a></li>
         <li><a href="#">Analysis</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
       </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
 
       <form class="navbar-form navbar-right" role="login">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Username">
-          <input type="text" class="form-control" placeholder="Password">
+          <input type="text" class="form-control" placeholder="Username" ng-model="username">
+          <input type="text" class="form-control" placeholder="Password" ng-model="password">
         </div>
-        <button type="submit" class="btn btn-default">Login</button>
+        <button type="submit" class="btn btn-default" ng-click="Login()">Login</button>
       </form>
       
     </div><!-- /.navbar-collapse -->
