--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
         var isLogin = <%- isLogin ? 'true' : 'false'%>;
         if(isLogin){
             var userId = "<%- User.cid %>";
-            userName = "<%- User.cname %>";
+            var userName = "<%- User.cname %>";
             var userGender = "<%- User.cgender %>"
             var userBirthday = "<%- User.cbirthday %>";
             var userAccount = "<%- User.caccount %>";
@@ -28,12 +28,6 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
       <a class="navbar-brand" href="#">
             <img alt="Brand" class="glyphicon glyphicon-shopping-cart
 ">
