Tab with pagination

--- a/views/partials/partial1.ejs
+++ b/views/partials/partial1.ejs
@@ -1,2 +1,27 @@
-view 1.
-<div></div>
+<div>
+	<nav>
+	  <ul class="pagination">
+	    <li>
+	      <a href="#" aria-label="Previous">
+	        <span aria-hidden="true">&laquo;</span>
+	      </a>
+	    </li>
+	    <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">1</a></li>
+	    <li><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">2</a></li>
+	    <li><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">3</a></li>
+	    <li><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">4</a></li>
+	    <li>
+	      <a href="#" aria-label="Next">
+	        <span aria-hidden="true">&raquo;</span>
+	      </a>
+	    </li>
+	  </ul>
+	</nav>
+
+	<div class="tab-content">
+	    <div role="tabpanel" class="tab-pane active" id="home">home</div>
+	    <div role="tabpanel" class="tab-pane" id="profile">profile</div>
+	    <div role="tabpanel" class="tab-pane" id="messages">messages</div>
+	    <div role="tabpanel" class="tab-pane" id="settings">settings</div>
+	</div>
+</div>
