--- a/views/partials/createhistory.ejs
+++ b/views/partials/createhistory.ejs
@@ -1,1 +1,38 @@
-the partial for view 2
+<div>
+	<nav>
+	  <ul class="pagination">
+	    <li>
+	      <a href="#" aria-label="Previous">
+	        <span aria-hidden="true">&laquo;</span>
+	      </a>
+	    </li>
+	    <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">1</a></li>
+	    <li><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">2</a></li>
+	    <li><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">3</a></li>
+	    <li><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">4</a></li>
+	    <li>
+	      <a href="#" aria-label="Next">
+	        <span aria-hidden="true">&raquo;</span>
+	      </a>
+	    </li>
+	  </ul>
+	</nav>
+
+	<div class="tab-content">
+	    <div role="tabpanel" class="tab-pane active" id="otherproducts1">
+	    	
+	    </div>
+	    <div role="tabpanel" class="tab-pane" id="otherproducts2">
+	    	
+	    </div>
+	    <div role="tabpanel" class="tab-pane" id="otherproducts3">
+	    	
+	    </div>
+	    <div role="tabpanel" class="tab-pane" id="otherproducts4">
+	    	
+	    </div>
+	    <div role="tabpanel" class="tab-pane" id="otherproducts5">
+	    	
+	    </div>
+	</div>
+</div>
