--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -26,13 +26,10 @@ a:hover {
 	background-repeat:no-repeat;
 	width: 40px;
 	height: 50px;
-	padding-right: 32px;
-	margin-top: 0px;
 }
 
-.navbar{
+.{
 	background-color: #4ea6bc;
-	height: 82px;
 	padding: 15px ;
 	border-radius: 0;
 	margin: 0;
@@ -49,22 +46,8 @@ a:hover {
 }
 
 .navbar input{
-	float: right;
-	margin-top: 10px;
-	margin-right: 10px;
-	height: 30px;
-	border-radius: 5px;
+	width: 100px;
 }
-
-.navbar button{
-	float: right;
-	margin-top: 10px;
-	margin-right: 10px;
-	height: 30px;
-	border-radius: 5px;
-	background-color: rgb(100, 235, 100);
-}
-
 /*-----------------------------------
 	Breadcrumb 
 -----------------------------------*/
@@ -130,12 +113,12 @@ a:hover {
 }
 
 .bigcart{
-	background:url(../img/sprite.png);
+	background:url(../images/sprite.png);
 	background-position: 0px 11px;
 	background-repeat:no-repeat;
 	width: 155px;
 	height: 120px;
-	margin:40px 0 40px 60px;
+	margin:0 0 40px 60px;
 }
 
 
@@ -313,7 +296,7 @@ a:hover {
 	}
 
 	.bigcart{
-		margin: 0px auto 40px auto;
+		margin: 0 auto 40px auto;
 	}
 
 	.col-md-5.col-sm-12 h1{
