--- a/views/partials/product.ejs
+++ b/views/partials/product.ejs
@@ -1,87 +1,143 @@
-<div class="page-header">
-	<h1>Products  <small>sexy products</small></h1>
-</div>
-<div class="row">
-    <div class="col-xs-6 col-md-3">
-        <a href="#" class="thumbnail">
-            <img src="img/skin1.jpg">
-        </a>
-        <p>skin no.1</p>
-    </div>
-    <div class="col-xs-6 col-md-3">
-        <a href="#" class="thumbnail">
-            <img src="img/skin2.jpg">
-        </a>
-        <p>skin no.2</p>
-    </div>
-    <div class="col-xs-6 col-md-3">
-        <a href="#" class="thumbnail">
-            <img src="img/skin3.jpg">
-        </a>
-        <p>skin no.3</p>
-    </div>
-    <div class="col-xs-6 col-md-3">
-        <a href="#" class="thumbnail">
-            <img src="img/skin4.jpg">
-        </a>
-        <p>skin no.4</p>
-    </div>
-</div>
-<nav>
-    <h1><small>other products</small></h1>
-    <ul class="pagination">
-        <li>
-            <a href="#" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-            </a>
-        </li>
-        <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">5</a></li>
-        <li>
-            <a href="#" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-            </a>
-        </li>
-    </ul>
-</nav>
-<div class="row">
-    <div class="col-xs-4 col-md-2">
-        <a href="#" class="thumbnail">
-            <img src="img/skin1.jpg">
-        </a>
-        <p>skin no.1</p>
-    </div>
-    <div class="col-xs-4 col-md-2">
-        <a href="#" class="thumbnail">
-            <img src="img/skin2.jpg">
-        </a>
-        <p>skin no.2</p>
-    </div>
-    <div class="col-xs-4 col-md-2">
-        <a href="#" class="thumbnail">
-            <img src="img/skin3.jpg">
-        </a>
-        <p>skin no.3</p>
-    </div>
-    <div class="col-xs-4 col-md-2">
-        <a href="#" class="thumbnail">
-            <img src="img/skin4.jpg">
-        </a>
-        <p>skin no.4</p>
-    </div>
-    <div class="col-xs-4 col-md-2">
-        <a href="#" class="thumbnail">
-            <img src="img/skin3.jpg">
-        </a>
-        <p>skin no.5</p>
-    </div>
-    <div class="col-xs-4 col-md-2">
-        <a href="#" class="thumbnail">
-            <img src="img/skin4.jpg">
-        </a>
-        <p>skin no.6</p>
-    </div>
+<div style="margin-left: 3%;margin-right: 3%">
+	<div class="page-header">
+		<h1>Products  <small>sexy products</small></h1>
+	</div>
+	<div class="row">
+    	<div class="col-xs-6 col-md-3">
+        	<a href="#" class="thumbnail">
+            	<img src="img/skin1.jpg">
+	        </a>
+ 	        <p>skin no.1</p>
+ 	    </div>
+ 	    <div class="col-xs-6 col-md-3">
+  	        <a href="#" class="thumbnail">
+        	    <img src="img/skin2.jpg">
+  	        </a>
+            <p>skin no.2</p>
+  	    </div>
+    	<div class="col-xs-6 col-md-3">
+        	<a href="#" class="thumbnail">
+            	<img src="img/skin3.jpg">
+        	</a>
+        	<p>skin no.3</p>
+    	</div>
+    	<div class="col-xs-6 col-md-3">
+        	<a href="#" class="thumbnail">
+            	<img src="img/skin4.jpg">
+        	</a>
+        	<p>skin no.4</p>
+    	</div>
+	</div>
+	<nav>
+    	<h3>other products</h3>
+    	<ul class="pagination">
+        	<li>
+            	<a href="#" aria-label="Previous">
+                	<span aria-hidden="true">&laquo;</span>
+            	</a>
+        	</li>
+        	<li role="presentation" class="active"><a href="#otherproducts1" aria-controls="otherproducts1" role="tab" data-toggle="tab">1</a></li>
+        	<li><a href="#otherproducts2" aria-controls="otherproducts2" role="tab" data-toggle="tab">2</a></li>
+        	<li><a href="#otherproducts3" aria-controls="otherproducts3" role="tab" data-toggle="tab">3</a></li>
+        	<li><a href="#otherproducts4" aria-controls="otherproducts4" role="tab" data-toggle="tab">4</a></li>
+        	<li><a href="#otherproducts5" aria-controls="otherproducts5" role="tab" data-toggle="tab">5</a></li>
+        	<li>
+        	    <a href="#" aria-label="Next">
+        	        <span aria-hidden="true">&raquo;</span>
+        	    </a>
+        	</li>
+    	</ul>
+	</nav>
+	<div class="tab-content">
+	    <div role="tabpanel" class="tab-pane active" id="otherproducts1">
+	    	<div class="row">
+            	<div class="col-xs-4 col-md-2">
+    	        	<a href="#" class="thumbnail">
+        	        	<img src="img/skin1.jpg">
+            		</a>
+        	    	<p>skin no.1</p>
+    	    	</div>
+        		<div class="col-xs-4 col-md-2">
+    	    	    <a href="#" class="thumbnail">
+    	        	    <img src="img/skin2.jpg">
+    	        	</a>
+    	        	<p>skin no.2</p>
+    	    	</div>
+        		<div class="col-xs-4 col-md-2">
+    	    	    <a href="#" class="thumbnail">
+    	        	    <img src="img/skin3.jpg">
+    	    	    </a>
+    	    	    <p>skin no.3</p>
+    	    	</div>
+    	    	<div class="col-xs-4 col-md-2">
+    	        	<a href="#" class="thumbnail">
+        	    	    <img src="img/skin4.jpg">
+            		</a>
+        	    	<p>skin no.4</p>
+    	    	</div>
+    	    	<div class="col-xs-4 col-md-2">
+        		    <a href="#" class="thumbnail">
+    	    	        <img src="img/skin3.jpg">
+    	        	</a>
+    	    	    <p>skin no.5</p>
+        		</div>
+    	    	<div class="col-xs-4 col-md-2">
+    	    	    <a href="#" class="thumbnail">
+        		        <img src="img/skin4.jpg">
+    	    	    </a>
+    	        	<p>skin no.6</p>
+    	    	</div>
+    		</div>
+	    </div>
+	    <div role="tabpanel" class="tab-pane" id="otherproducts2">
+	    	
+	    </div>
+	    <div role="tabpanel" class="tab-pane" id="otherproducts3">
+	    	
+	    </div>
+	    <div role="tabpanel" class="tab-pane" id="otherproducts4">
+	    	
+	    </div>
+	    <div role="tabpanel" class="tab-pane" id="otherproducts5">
+	    	
+	    </div>
+	</div>
+	<div class="row">
+    	<div class="col-xs-4 col-md-2">
+        	<a href="#" class="thumbnail">
+            	<img src="img/skin1.jpg">
+        	</a>
+        	<p>skin no.1</p>
+    	</div>
+    	<div class="col-xs-4 col-md-2">
+    	    <a href="#" class="thumbnail">
+    	        <img src="img/skin2.jpg">
+    	    </a>
+    	    <p>skin no.2</p>
+    	</div>
+    	<div class="col-xs-4 col-md-2">
+    	    <a href="#" class="thumbnail">
+    	        <img src="img/skin3.jpg">
+    	    </a>
+    	    <p>skin no.3</p>
+    	</div>
+    	<div class="col-xs-4 col-md-2">
+        	<a href="#" class="thumbnail">
+        	    <img src="img/skin4.jpg">
+        	</a>
+        	<p>skin no.4</p>
+    	</div>
+    	<div class="col-xs-4 col-md-2">
+    	    <a href="#" class="thumbnail">
+    	        <img src="img/skin3.jpg">
+    	    </a>
+    	    <p>skin no.5</p>
+    	</div>
+    	<div class="col-xs-4 col-md-2">
+    	    <a href="#" class="thumbnail">
+    	        <img src="img/skin4.jpg">
+    	    </a>
+    	    <p>skin no.6</p>
+    	</div>
+	</div>
 </div>
