--- a/views/partials/createhistory.ejs
+++ b/views/partials/createhistory.ejs
@@ -1,38 +1,29 @@
-<div>
-	<nav>
-	  <ul class="pagination">
-	    <li>
-	      <a href="#" aria-label="Previous">
-	        <span aria-hidden="true">&laquo;</span>
-	      </a>
-	    </li>
-	    <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">1</a></li>
-	    <li><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">2</a></li>
-	    <li><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">3</a></li>
-	    <li><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">4</a></li>
-	    <li>
-	      <a href="#" aria-label="Next">
-	        <span aria-hidden="true">&raquo;</span>
-	      </a>
-	    </li>
-	  </ul>
-	</nav>
-
-	<div class="tab-content">
-	    <div role="tabpanel" class="tab-pane active" id="otherproducts1">
-	    	
-	    </div>
-	    <div role="tabpanel" class="tab-pane" id="otherproducts2">
-	    	
-	    </div>
-	    <div role="tabpanel" class="tab-pane" id="otherproducts3">
-	    	
-	    </div>
-	    <div role="tabpanel" class="tab-pane" id="otherproducts4">
-	    	
-	    </div>
-	    <div role="tabpanel" class="tab-pane" id="otherproducts5">
-	    	
-	    </div>
-	</div>
+<div style="margin-left: 3%; margin-right: 3%;" class="bs-example" data-example-id="striped-table">
+    <div class="page-header">
+    	<h1>Create History</h1>
+    </div>
+    <div class="table table-striped">
+        <thead>
+        	<tr>
+    		    <th>#</th>
+    	    	<th>Product Name</th>
+    	    	<th>Price</th>
+    	    	<th>Chance</th>
+    	    </tr>
+        </thead>
+    	<tbody>
+    		<tr>
+    		    <th><img src="img/skin1.jpg"></th>
+    		    <th>skin no.1</th>
+    		    <th>270</th>
+    		    <th><input type="text" placeholder="Chance"></th>
+    	    </tr>
+    	    <tr>
+    		    <th><img src="img/skin2.jpg"></th>
+    		    <th>skin no.2</th>
+    		    <th>270</th>
+    		    <th><input type="text" placeholder="Chance"></th>
+    	    </tr>
+    	</tbody>
+    </div>
 </div>
