Create history with table tag

--- a/views/partials/createhistory.ejs
+++ b/views/partials/createhistory.ejs
@@ -2,7 +2,7 @@
     <div class="page-header">
     	<h1>Create History</h1>
     </div>
-    <div class="table table-striped">
+    <table class="table table-striped">
         <thead>
         	<tr>
     		    <th>#</th>
@@ -25,5 +25,5 @@
     		    <th><input type="text" placeholder="Chance"></th>
     	    </tr>
     	</tbody>
-    </div>
+    </table>
 </div>
