--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,6 +48,7 @@
                         </a>
                     </li>
                     <li><a href="#">Analist</a></li>
+                    <li><a href="#" ng-bind="$root.user.userName || '訪客'"></a></li>
                 </ul>
                 <form class="navbar-form navbar-left" role="search">
                     <div class="form-group">
