--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,7 +58,7 @@
                 <ul class="navbar-form navbar-right" role="login">
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Username" ng-model="username">
-                        <input type="text" class="form-control" placeholder="Password" ng-model="password">
+                        <input type="password" class="form-control" placeholder="Password" ng-model="password">
                     </div>
                     <button type="submit" class="btn btn-default" ng-click="Login()">Login</button>
                 </ul>
