--- a/views/partials/createhistory.ejs
+++ b/views/partials/createhistory.ejs
@@ -5,7 +5,7 @@
     <table class="table table-striped">
         <thead>
         	<tr>
-    		    <th>#</th>
+    		    <th></th>
     	    	<th>Product Name</th>
     	    	<th>Price</th>
     	    	<th>Chance</th>
@@ -13,13 +13,13 @@
         </thead>
     	<tbody>
     		<tr>
-    		    <th><img src="img/skin1.jpg"></th>
+    		    <th><img style="width: 100px; height: 72px" src="img/skin1.jpg"></th>
     		    <th>skin no.1</th>
     		    <th>270</th>
     		    <th><input type="text" placeholder="Chance"></th>
     	    </tr>
     	    <tr>
-    		    <th><img src="img/skin2.jpg"></th>
+    		    <th><img style="width: 100px; height: 72px" src="img/skin2.jpg"></th>
     		    <th>skin no.2</th>
     		    <th>270</th>
     		    <th><input type="text" placeholder="Chance"></th>
