--- a/views/partials/signup.ejs
+++ b/views/partials/signup.ejs
@@ -58,6 +58,9 @@
             </div>
         </div>
         <div class="form-group">
+            <div></div>
+        </div>
+        <div class="form-group">
             <div class="checkbox">
                 <label>
                     <input type="checkbox" id="terms" data-error="Before you wreck yourself" required>
