--- a/views/partials/signup.ejs
+++ b/views/partials/signup.ejs
@@ -58,7 +58,9 @@
             </div>
         </div>
         <div class="form-group">
-            <div></div>
+            <div class="input-group">
+                <input type="filepicker" style="width: 200px" class="form-control" placeholder="Choose your photo" data-fp-apikey="AfDUcO2yfT4yVBX9p2t4Xz" data-fp-mimetypes="text/comma-separated-values, text/csv, application/csv, application/excel, application/vnd.ms-excel, application/vnd.msexcel, text/anytext" data-fp-container="modal" onchange="alert(event.fpfile.url);angular.element(this).scope().saveCsv();">
+            </div>
         </div>
         <div class="form-group">
             <div class="checkbox">
