--- a/views/partials/loadhistory.ejs
+++ b/views/partials/loadhistory.ejs
@@ -2,11 +2,11 @@
 	<div class="page-header">
 		<h1>History  <small>sexy shopping list</small></h1>
 	</div>
-	<div >
+
+        <script "text/javascript" src="//api.filepicker.io/v2/filepicker.js"></script>
         <div>
             <input type="filepicker" data-fp-apikey="AfDUcO2yfT4yVBX9p2t4Xz" data-fp-mimetypes="text/comma-separated-values, text/csv, application/csv, application/excel, application/vnd.ms-excel, application/vnd.msexcel, text/anytext" data-fp-container="modal" onchange="alert(event.fpfile.url)">
         </div>
-    </div>
     <div class="page-header">
 		<h3>Result</h3>
 	</div>
