createhistory front-end, controller

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,5 +82,6 @@
     <script src="../js/controllers.js"></script>
     <script src="../js/filters.js"></script>
     <script src="../js/directives.js"></script>
+    <script src="../js/underscore-min.js"></script>
 </body>
 </html>
