--- a/views/partials/product.ejs
+++ b/views/partials/product.ejs
@@ -3,51 +3,53 @@
 		<h1>Products  <small>sexy products</small></h1>
 	</div>
 	<div class="row">
-    	<div class="col-xs-6 col-md-3">
-        	<a href="#" class="thumbnail">
-            	<img src="img/skin1.jpg">
+    	<div class="col-xs-6 col-md-3" ng-repeat="a in products track by $index">
+        	<a href="#" class="thumbnail" ng-if="$index<=3">
+            	<img ng-src="{{products[$index].pimage}}" style="width: 100px; height: 80px;">
 	        </a>
- 	        <p>skin no.1</p>
+ 	        <p>{{products[$index].pname}}</p>
  	    </div>
- 	    <div class="col-xs-6 col-md-3">
+<!-- 	<div class="col-xs-6 col-md-3">
   	        <a href="#" class="thumbnail">
-        	    <img src="img/skin2.jpg">
+        	    <img ng-src="{{products[$index].pimage}}">
   	        </a>
             <p>skin no.2</p>
   	    </div>
     	<div class="col-xs-6 col-md-3">
         	<a href="#" class="thumbnail">
-            	<img src="img/skin3.jpg">
+            	<img ng-src="{{products[$index].pimage}}">
         	</a>
         	<p>skin no.3</p>
     	</div>
     	<div class="col-xs-6 col-md-3">
         	<a href="#" class="thumbnail">
-            	<img src="img/skin4.jpg">
+            	<img ng-src="{{products[$index].pimage}}">
         	</a>
         	<p>skin no.4</p>
-    	</div>
+    	</div>        -->
 	</div>
 	<nav>
     	<h3>other products</h3>
     	<ul class="pagination">
-        	<li role="presentation" class="active"><a href="#otherproducts1" aria-controls="otherproducts1" role="tab" data-toggle="tab">1</a></li>
-        	<li><a href="#otherproducts2" aria-controls="otherproducts2" role="tab" data-toggle="tab">2</a></li>
+        	<li role="presentation" class="active">
+                <a href="#otherproducts1" aria-controls="otherproducts1" role="tab" data-toggle="tab" ng-repeat="a in products track by $index" ng-bind="$index+1" ng-if="$index<pagenum"></a>
+            </li>
+<!--        <li><a href="#otherproducts2" aria-controls="otherproducts2" role="tab" data-toggle="tab">2</a></li>
         	<li><a href="#otherproducts3" aria-controls="otherproducts3" role="tab" data-toggle="tab">3</a></li>
         	<li><a href="#otherproducts4" aria-controls="otherproducts4" role="tab" data-toggle="tab">4</a></li>
-        	<li><a href="#otherproducts5" aria-controls="otherproducts5" role="tab" data-toggle="tab">5</a></li>
+        	<li><a href="#otherproducts5" aria-controls="otherproducts5" role="tab" data-toggle="tab">5</a></li>  -->
     	</ul>
 	</nav>
 	<div class="tab-content">
 	    <div role="tabpanel" class="tab-pane active" id="otherproducts1">
 	    	<div class="row">
-            	<div class="col-xs-4 col-md-2">
+            	<div class="col-xs-4 col-md-2"  ng-repeat="a in products track by $index" ng-if="$index>3">
     	        	<a href="#" class="thumbnail">
-        	        	<img src="img/skin1.jpg">
+        	        	<img ng-src="{{products[$index].pimage}}">
             		</a>
-        	    	<p>skin no.1</p>
+        	    	<p>{{products[$index].pname}}</p>
     	    	</div>
-        		<div class="col-xs-4 col-md-2">
+<!--        	<div class="col-xs-4 col-md-2">
     	    	    <a href="#" class="thumbnail">
     	        	    <img src="img/skin2.jpg">
     	        	</a>
@@ -76,10 +78,10 @@
         		        <img src="img/skin4.jpg">
     	    	    </a>
     	        	<p>skin no.6</p>
-    	    	</div>
+    	    	</div>  -->
     		</div>
 	    </div>
-	    <div role="tabpanel" class="tab-pane" id="otherproducts2">
+<!--	<div role="tabpanel" class="tab-pane" id="otherproducts2">
 	    	<div class="row">
             	<div class="col-xs-4 col-md-2">
     	        	<a href="#" class="thumbnail">
@@ -238,6 +240,6 @@
     	        	<p>skin no.30</p>
     	    	</div>
     		</div>
-	    </div>
+	    </div> -->
 	</div>
 </div>
