--- a/views/partials/profile.ejs
+++ b/views/partials/profile.ejs
@@ -2,25 +2,25 @@
     <div class="page-header">
         <h1>Profile <small>show your sexy datas</small></h1>
     </div>
-    <img class="col-lg-4" src="img/ernie.jpg">
+    <img class="col-lg-4" ng-src="$root.user.userPhoto || '訪客'">
     <div class=" col-lg-8">
         <table class="table">
             <tbody>
                 <tr>
                     <th>Name</th>
-                    <th>ernie</th>
+                    <th ng-bind="$root.user.userName || 'ernie'"></th>
                 </tr>
                 <tr>
                     <th>Email</th>
-                    <th>b01505023@ntu.edu.tw</th>
+                    <th ng-bind="$root.user.userEmail || 'b01505023@ntu.edu.tw'"></th>
                 </tr>
                 <tr>
                     <th>Gender</th>
-                    <th>Male</th>
+                    <th ng-bind="$root.user.userGender || 'Male'"></th>
                 </tr>
                 <tr>
                     <th>Birthday</th>
-                    <th>52/17/69</th>
+                    <th ng-bind="$root.user.userBirthday || '52/17/69'"></th>
                 </tr>
             </tbody>
         </table>
