--- a/views/partials/createhistory.ejs
+++ b/views/partials/createhistory.ejs
@@ -20,7 +20,7 @@
     		    <th><img style="width: 100px; height: 72px" ng-src="{{products[$index].pimage}}"></th>
     		    <th>{{products[$index].pname}}</th>
     		    <th>{{products[$index].pprice}}</th>
-    		    <th><input type="text" placeholder="Chance" ng-model="shoppinglist[$index].prob"></th>
+    		    <th><input type="text" placeholder="Chance" ng-model="productprob[$index].prob"></th>
     	    </tr>
 <!--     	    <tr>
     		    <th><img style="width: 100px; height: 72px" src="img/skin2.jpg"></th>
@@ -30,5 +30,6 @@
     	    </tr> -->
     	</tbody>
     </table>
+    <h1 ng-show="exceed">Exceed Kinds of Products that we Offer</h1>
     <button type="button" class="btn btn-primary btn-lg" ng-click="submit()">Submit</button>
 </div>
