--- a/views/partials/signup.ejs
+++ b/views/partials/signup.ejs
@@ -5,17 +5,17 @@
     <form data-toggle="validator" role="form">
         <div class="form-group">
             <label for="inputName" class="control-label">Name</label>
-            <input type="text" style="width: 200px;" class="form-control" id="inputName" placeholder="Sexy CH4" required>
+            <input type="text" style="width: 200px;" ng-model="username" class="form-control" id="inputName" placeholder="Sexy CH4" required>
         </div>
         <div class="form-group">
             <label for="inputEmail" class="control-label">Email</label>
-            <input type="email" style="width: 400px" class="form-control" id="inputEmail" placeholder="b02305010@ntu.edu.tw" data-error="Bruh, that email address is invalid" required>
+            <input type="email" style="width: 400px" ng-model="email" class="form-control" id="inputEmail" placeholder="b02305010@ntu.edu.tw" data-error="Bruh, that email address is invalid" required>
             <div class="help-block with-errors"></div>
         </div>
         <div class="form-group">
             <label for="inputPassword" class="control-label">Password</label>
             <div class="form-group">
-                <input type="password" style="width: 200px;" data-minlength="6" class="form-control" id="inputPassword" placeholder="ernie69ernie" required>
+                <input type="password" style="width: 200px;" data-minlength="6" class="form-control" id="inputPassword" ng-model="password" placeholder="ernie69ernie" required>
                 <span class="help-block">Minimum of 6 characters</span>
             </div>
             <div class="form-group">
@@ -46,13 +46,13 @@
         <div class="form-group">
             <div class="radio">
                 <label>
-                    <input type="radio" required>
+                    <input type="radio" ng-model="gender" required>
                     Male
                 </label>
             </div>
             <div class="radio">
                 <label>
-                    <input type="radio" required>
+                    <input type="radio" ng-model="gender"  required>
                     Female
                 </label>
             </div>
@@ -72,7 +72,7 @@
             </div>
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" ng-click="Signup()">Submit</button>
         </div>
     </form>
 </div>
