--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,12 +41,12 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li class="active">
-                        <a href="#">Product
+                        <a href="/product">Product
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
-                    <li><a href="#">Analist</a></li>
-                    <li><a href="#" ng-bind="$root.user.userName || '訪客'"></a></li>
+                    <li><a href="/createhistory">History</a></li>
+                    <li><a href="/profile" ng-bind="$root.user.userName || '訪客'"></a></li>
                 </ul>
                 <form class="navbar-form navbar-left" role="search">
                     <div class="form-group">
