--- a/views/partials/product.ejs
+++ b/views/partials/product.ejs
@@ -3,9 +3,9 @@
 		<h1>Products  <small>sexy products</small></h1>
 	</div>
 	<div class="row">
-    	<div class="col-xs-6 col-md-3" ng-repeat="a in products track by $index">
-        	<a href="#" class="thumbnail" ng-if="$index<=3">
-            	<img ng-src="{{products[$index].pimage}}" style="width: 100px; height: 80px;">
+    	<div class="col-xs-6 col-md-3" ng-repeat="a in products track by $index" ng-if="$index<=3">
+        	<a href="#" class="thumbnail">
+            	<img ng-src="{{products[$index].pimage}}" style="width: 250px; height: 250px;">
 	        </a>
  	        <p>{{products[$index].pname}}</p>
  	    </div>
@@ -30,20 +30,20 @@
 	</div>
 	<nav>
     	<h3>other products</h3>
-    	<ul class="pagination">
+<!--    	<ul class="pagination">
         	<li role="presentation" class="active">
-                <a href="#otherproducts1" aria-controls="otherproducts1" role="tab" data-toggle="tab" ng-repeat="a in products track by $index" ng-bind="$index+1" ng-if="$index<pagenum"></a>
-            </li>
-<!--        <li><a href="#otherproducts2" aria-controls="otherproducts2" role="tab" data-toggle="tab">2</a></li>
+                <a href="#otherproducts1" role="tab" data-toggle="tab" ng-repeat="a in products track by $index" aria-controls="otherproducts1" ng-bind="$index+1" ng-if="$index<pagenum"></a>
+            </li> 
+            <li><a href="#otherproducts2" aria-controls="otherproducts2" role="tab" data-toggle="tab">2</a></li>
         	<li><a href="#otherproducts3" aria-controls="otherproducts3" role="tab" data-toggle="tab">3</a></li>
         	<li><a href="#otherproducts4" aria-controls="otherproducts4" role="tab" data-toggle="tab">4</a></li>
-        	<li><a href="#otherproducts5" aria-controls="otherproducts5" role="tab" data-toggle="tab">5</a></li>  -->
-    	</ul>
+        	<li><a href="#otherproducts5" aria-controls="otherproducts5" role="tab" data-toggle="tab">5</a></li> 
+    	</ul> -->
 	</nav>
 	<div class="tab-content">
-	    <div role="tabpanel" class="tab-pane active" id="otherproducts1">
+<!--	    <div role="tabpanel" class="tab-pane active" id="otherproducts1">  -->
 	    	<div class="row">
-            	<div class="col-xs-4 col-md-2"  ng-repeat="a in products track by $index" ng-if="$index>3">
+            	<div class="col-xs-4 col-md-2" ng-repeat="a in products track by $index" ng-if="$index>3">
     	        	<a href="#" class="thumbnail">
         	        	<img ng-src="{{products[$index].pimage}}">
             		</a>
@@ -241,5 +241,5 @@
     	    	</div>
     		</div>
 	    </div> -->
-	</div>
+<!--	</div> -->
 </div>
